test/sematest/invalid/new_void_array.java
class A {
    public static void main(String[] args) {
        new void[13];
    }
}
